<resources>
    <string name="app_name">The Walking School Bus</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="join_group">JOIN GROUP</string>
    <string name="group_id">GROUP ID:</string>
    <string name="group_description">GROUP DESCRIPTION:</string>
    <string name="join_nearby_group">JOIN NEARBY GROUP</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="leader_id_label">LEADER ID:</string>
    <string name="leader_name_label">LEADER NAME:</string>
    <string name="member_of_group">MEMBERS OF THE GROUP</string>
    <string name="email">EMAIL:</string>

    <string name="user_id">USER ID:</string>
    <string name="user_name">USER NAME:</string>
    <string name="remove_user_from_group">REMOVE USER FROM GROUP</string>
    <string name="address">ADDRESS:</string>
    <string name="emergency_info">EMERGENCY INFO:</string>
    <string name="cell_phone">CELL PHONE:</string>
    <string name="home_phone">HOME PHONE:</string>
    <string name="teacher_name">TEACHER NAME:</string>
    <string name="monitored_by">MONITORED BY</string>
    <string name="edit_user">EDIT USER</string>
    <string name="profile_address">4444 WalkingGroup Ave.</string>
    <string name="profile_group_name_hint">Group Name</string>
    <string name="profile_group_id_hint">Group ID</string>
    <!--
    profile activity begins here
    -->
    <string name="profact_name">Name</string>
    <string name="profact_enter_name">Enter Name</string>
    <string name="profact_email">Email</string>
    <string name="profact_enter_email">Enter Email</string>
    <string name="profact_phone_number">Cell Phone Number</string>
    <string name="profact_enter_phone_number">Enter Cell Phone Number</string>
    <string name="profact_home_phone">Home Phone Number</string>
    <string name="profact_enter_homephone_number">Enter Home Phone Number</string>
    <string name="profact_address">Address</string>
    <string name="profact_enter_address">Enter Address</string>
    <string name="profact_birth_month_year_mm_yyyy">Birth Month/Year (MM/YYYY)</string>
    <string name="profact_enter_birth_year">Enter Birth Year</string>
    <string name="profact_enter_birth_month">Enter Birth Month</string>
    <string name="profact_teacher_name">Teacher Name</string>
    <string name="profact_enter_teacher_name">Enter Name</string>
    <string name="profact_current_grade">Current Grade</string>
    <string name="profact_enter_grade">Grade</string>
    <string name="profact_emergency_contact">Emergency Contact</string>
    <string name="profact_enter_emergency_info">Enter info</string>
    <string name="proffrag_edit_info">Edit Info</string>
    <string name="proffrag_emergency_contact">Emergency Contact</string>
    <string name="proffrag_teacher_name">Teacher Name</string>
    <string name="proffrag_address">Address</string>
    <string name="proffrag_home_phone_number">Home Phone Number</string>
    <string name="proffrag_current_grade">Current Grade</string>
    <string name="proffrag_cell_phone_number">Cell Phone Number</string>
    <string name="proffrag_birthday_year">Birthday Year</string>
    <string name="proffrag_email">Email</string>
    <string name="proffrag_birthday_month">Birthday Month</string>
    <string name="proffrag_profile_name">Profile Name</string>
    <string name="profact_saveBtn">Save</string>
    <string name="profact_cancelBtn">Cancel</string>
    <string name="profact_birthday_month">Birthday Month</string>
    <string name="profact_birthday_year">Birthday Year</string>
    <string name="regact_name">*Name</string>
    <string name="regact_email">*Email</string>
    <string name="regact_password">*Password</string>
    <string name="regact_enter_name">Enter Name</string>
    <string name="regact_enter_email">Enter Email</string>
    <string name="regact_enter_password">Enter Password</string>
    <string name="regact_registerBtn">register</string>
    <string name="regact_date_of_birth">Date of Birth</string>
    <string name="regact_enter_year">Year</string>
    <string name="regact_enter_month">Month</string>
    <string name="regact_address">Address</string>
    <string name="regact_enter_address">Enter Address</string>
    <string name="regact_cell_phone">Cell Phone</string>
    <string name="regact_enter_cell_phone_no">Enter Cell Phone No.</string>
    <string name="regact_home_phone">Home Phone</string>
    <string name="regact_enter_home_phone_no">Enter Home Phone No.</string>
    <string name="regact_grade">Grade</string>
    <string name="regact_enter_grade">Enter Grade</string>
    <string name="regact_teacher_name">Teacher Name</string>
    <string name="regact_enter_teacher_name">Enter Teacher Name</string>
    <string name="regact_emergency_contact_info">Emergency Contact Info</string>
    <string name="regact_enter_contact_info">Enter Info</string>
    <string name="mainact_enter_email">Enter Email</string>
    <string name="mainact_enter_password">Enter Password</string>
    <string name="mainact_password">Password</string>
    <string name="mainact_email">Email</string>
    <string name="mainact_registerBtn">register</string>
    <string name="mainact_loginBtn">Log in</string>
    <string name="mainact_wsb_header">The Walking School Bus</string>
    <string name="permifrag_All_pending_permissions">ALL PENDING REQUEST(S) (approve/deny)</string>
    <string name="permifrag_ALL_permissions">ALL REQUEST(S) (see messages)</string>
    <string name="permifrag_ALL">ALL REQUEST(S) (see messages)</string>
</resources>
