<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thewalkingschoolbus.thewalkingschoolbus.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:text="@string/regact_name"
                android:textSize="18sp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/registernameid"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView5"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registernameid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/regact_enter_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registeremailid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignStart="@+id/registernameid"
                android:ems="10"
                android:hint="@string/regact_enter_email"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/registerpasswordid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignStart="@+id/registeremailid"
                android:ems="10"
                android:hint="@string/regact_enter_password"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register2id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/regact_registerBtn" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_date_of_birth"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/yearid"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/registerpasswordid"
                android:layout_below="@+id/registerpasswordid"
                android:ems="10"
                android:hint="@string/regact_enter_year"
                android:inputType="number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/monthid"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/registerpasswordid"
                android:layout_below="@+id/registerpasswordid"
                android:layout_marginEnd="14dp"
                android:ems="10"
                android:hint="@string/regact_enter_month"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView14"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressid"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/yearid"
                android:layout_below="@+id/yearid"
                android:ems="10"
                android:hint="@string/regact_enter_address"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView15"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_cell_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cellphoneid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/yearid"
                android:layout_below="@+id/addressid"
                android:ems="10"
                android:hint="@string/regact_enter_cell_phone_no"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView16"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_home_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/homePhoneid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/cellphoneid"
                android:layout_below="@+id/cellphoneid"
                android:ems="10"
                android:hint="@string/regact_enter_home_phone_no"
                android:inputType="phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView17"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_grade"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/gradeid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/homePhoneid"
                android:layout_below="@+id/homePhoneid"
                android:ems="10"
                android:hint="@string/regact_enter_grade"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView18"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_teacher_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/teacherNameid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/emergencyid"
                android:layout_below="@+id/gradeid"
                android:ems="10"
                android:hint="@string/regact_enter_teacher_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView19"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:text="@string/regact_emergency_contact_info"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emergencyid"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView20"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/regact_enter_contact_info"
                android:inputType="textMultiLine|textPersonName"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
