<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thewalkingschoolbus.thewalkingschoolbus.MainActivity"
    android:id="@+id/relativeLayout2"
    android:layout_marginBottom="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginStart="2dp"
    android:layout_marginTop="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/mainact_wsb_header"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailid"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@color/logoBlue"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/mainact_enter_email"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textColorHint="@color/graylight" />

                <EditText
                    android:id="@+id/passwordid"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/logoBlue"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/mainact_enter_password"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textColorHint="@color/graylight" />

                <Button
                    android:id="@+id/registerid"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/mainact_registerBtn" />

                <Button
                    android:id="@+id/loginid"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:text="@string/mainact_loginBtn" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
